# poiesis-mcp

./: .dockerignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
deployment/images/: Dockerfile
poiesis_mcp/: __init__.py  constants.py  main.py  utils.py
poiesis_mcp/tes/: __init__.py  client.py  models.py
poiesis_mcp/tools/: create_task.py  get_task.py  wait.py
