[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
[project]
dependencies = [
  "mcp[cli]>=1.14.1",
  "pydantic>=2.11.9",
]
description = "Poiesis (TES) MCP server"
name = "poiesis-mcp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
[project.scripts]
poiesis-mcp = "poiesis_mcp.main:main"
