[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
code-quality = [
  "pyrefly>=0.34.0",
  "ruff>=0.13.1",
]

[project]
dependencies = [
  "mcp[cli]>=1.14.1",
  "pydantic>=2.11.9",
  "requests>=2.32.5",
]
description = "Poiesis (TES) MCP server"
name = "poiesis-mcp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
poiesis-mcp = "poiesis_mcp.main:main"

[tool.pyrefly]
project-excludes = ["**/*venv/**/*"]
project-includes = ["**/*"]

[tool.ruff]
indent-width = 4
select = ["D"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
ignore = ["D203", "D212"]
select = [
  "B", # flake8-bugbear
  "C90", # mccabe
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "SIM", # flake8-simplify
  "UP", # pyupgrade
]
